@@ -29,6 +29,25 @@ AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_INSTALL
 
+
+dnl Option to disable Loconet support
+AC_ARG_ENABLE(loconet,
+    [  --disable-loconet       do not compile Loconet module],
+    [with_LOCONET="$enableval"], [with_LOCONET=yes])
+test "$with_LOCONET" = "yes" && AC_DEFINE(USE_LOCONET,1,
+                                    [define to 1 if you want Loconet support])
+AM_CONDITIONAL(USE_LOCONET, test "$with_LOCONET" = yes)
+
+
+dnl test for getaddrinfo, not available under Cygwin but necessary for Loconet
+if test "$with_LOCONET" = "yes"; then
+    AC_SEARCH_LIBS(getaddrinfo, inet6,
+        [AC_DEFINE(HAVE_GETADDRINFO,1,
+            [define to 1 if you have the getaddrinfo function])],
+        [AC_MSG_ERROR(getaddrinfo support missing)])
+fi
+
+
 dnl Checks for host dependend libraries.
 case $host in
   *-*-linux*)
